[gd_scene load_steps=24 format=3 uid="uid://7eqkumnlqoxm"]

[ext_resource type="Script" path="res://scenes/enemies/final_boss.gd" id="1_a5l2y"]
[ext_resource type="Texture2D" uid="uid://cphfha12n17hm" path="res://assets/sprites/enemies/final_boss_hit.png" id="1_dm4ic"]
[ext_resource type="Texture2D" uid="uid://3csd5i6kqnxu" path="res://assets/sprites/enemies/final_boss.png" id="1_wdfae"]
[ext_resource type="Texture2D" uid="uid://ccoxuu84t2ivs" path="res://assets/sprites/enemies/final_boss_hit_2.png" id="2_hj4sh"]
[ext_resource type="AudioStream" uid="uid://bwbq13m3so7w0" path="res://assets/sound/fx/FireEnemyHit.wav" id="5_l7s8j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cogvt"]
atlas = ExtResource("1_dm4ic")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_boikj"]
atlas = ExtResource("1_dm4ic")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckadc"]
atlas = ExtResource("1_dm4ic")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_08wjv"]
atlas = ExtResource("2_hj4sh")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_n60g0"]
atlas = ExtResource("2_hj4sh")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_16qev"]
atlas = ExtResource("2_hj4sh")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_itqbk"]
atlas = ExtResource("1_wdfae")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5pbs"]
atlas = ExtResource("1_wdfae")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_7o13o"]
atlas = ExtResource("1_wdfae")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6qkk"]
atlas = ExtResource("1_wdfae")
region = Rect2(200, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxgyy"]
atlas = ExtResource("1_wdfae")
region = Rect2(0, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_384v5"]
atlas = ExtResource("1_wdfae")
region = Rect2(50, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_u10b7"]
atlas = ExtResource("1_wdfae")
region = Rect2(100, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugsfk"]
atlas = ExtResource("1_wdfae")
region = Rect2(150, 0, 50, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_c05e1"]
atlas = ExtResource("1_wdfae")
region = Rect2(200, 0, 50, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cs7p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cogvt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boikj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckadc")
}],
"loop": true,
"name": &"hit1",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_08wjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n60g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16qev")
}],
"loop": true,
"name": &"hit2",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_itqbk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5pbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7o13o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6qkk")
}],
"loop": true,
"name": &"iddle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxgyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_384v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u10b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugsfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c05e1")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_klnd5"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yy0ca"]
radius = 18.0

[node name="FinalBoss" type="CharacterBody2D"]
position = Vector2(116, 66)
script = ExtResource("1_a5l2y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, -5)
sprite_frames = SubResource("SpriteFrames_5cs7p")
animation = &"iddle"
autoplay = "iddle"
frame = 2
frame_progress = 0.958501

[node name="BulletSpawner" type="Node2D" parent="."]

[node name="EnemyHitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitBox"]
shape = SubResource("CircleShape2D_klnd5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_yy0ca")

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="TimeBetweenBulletSpawns" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="TimeBetweenEachBullet" type="Timer" parent="."]
wait_time = 0.06
autostart = true

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_l7s8j")
volume_db = -22.333
pitch_scale = 1.02
attenuation = 0.933033

[node name="EnemyHurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtBox"]
shape = SubResource("CircleShape2D_klnd5")

[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="TimeBetweenBulletSpawns" to="." method="_on_time_between_bullet_spawns_timeout"]
[connection signal="timeout" from="TimeBetweenEachBullet" to="." method="_on_time_between_each_bullet_timeout"]
